--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.0.14",
     "@chakra-ui/react": "^1.6.5",
+    "@emotion/cache": "^11.4.0",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "framer-motion": "^4",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "stylis": "^4.0.10",
+    "stylis-plugin-rtl": "^2.1.0"
   },
   "devDependencies": {
     "@types/react": "17.0.14",
