--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "stylis": "^4.0.10",
     "stylis-plugin-rtl": "^2.1.0"
   },
   "devDependencies": {
     "@types/react": "17.0.14",
+    "@types/react-slick": "^0.23.5",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
     "typescript": "4.3.5"
