--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "graphql-types": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@apollo/client": "^3.3.21",
@@ -28,10 +29,17 @@
     "stylis-plugin-rtl": "^2.1.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "1.21.7",
+    "@types/graphql": "^14.5.0",
     "@types/react": "17.0.14",
     "@types/react-slick": "^0.23.5",
+    "apollo": "^2.33.4",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
-    "typescript": "4.3.5"
+    "typescript": "4.3.5",
+    "@graphql-codegen/typescript-react-apollo": "2.3.1",
+    "@graphql-codegen/typescript-operations": "1.18.4",
+    "@graphql-codegen/typescript": "1.23.0",
+    "@graphql-codegen/introspection": "1.18.2"
   }
 }
