--- a/codegen.yml
+++ b/codegen.yml
@@ -1,7 +1,7 @@
 overwrite: true
 schema: 'https://nimkat-academy.herokuapp.com/api/'
 generates:
-  graphql/generated/types.d.ts:
+  graphql/generated/:
     plugins:
       - 'typescript'
       - 'typescript-operations'
