--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/cache": "^11.4.0",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "axios": "^0.21.1",
     "formik": "^2.2.9",
     "framer-motion": "^4",
     "graphql": "^15.5.1",
@@ -23,23 +24,25 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-instagram-embed": "^3.0.0",
     "react-slick": "^0.28.1",
+    "react-spinners": "^0.11.0",
     "slick-carousel": "^1.8.1",
     "stylis": "^4.0.10",
     "stylis-plugin-rtl": "^2.1.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.21.7",
+    "@graphql-codegen/introspection": "1.18.2",
+    "@graphql-codegen/typescript": "1.23.0",
+    "@graphql-codegen/typescript-operations": "1.18.4",
+    "@graphql-codegen/typescript-react-apollo": "2.3.1",
     "@types/graphql": "^14.5.0",
     "@types/react": "17.0.14",
     "@types/react-slick": "^0.23.5",
     "apollo": "^2.33.4",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
-    "typescript": "4.3.5",
-    "@graphql-codegen/typescript-react-apollo": "2.3.1",
-    "@graphql-codegen/typescript-operations": "1.18.4",
-    "@graphql-codegen/typescript": "1.23.0",
-    "@graphql-codegen/introspection": "1.18.2"
+    "typescript": "4.3.5"
   }
 }
