--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-spinners": "^0.11.0",
     "slick-carousel": "^1.8.1",
     "stylis": "^4.0.10",
-    "stylis-plugin-rtl": "^2.1.0"
+    "stylis-plugin-rtl": "^2.1.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.21.7",
