--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^4",
     "graphql": "^15.5.1",
     "next": "11.0.1",
+    "next-pwa": "^5.2.24",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
